--- a/other/preceptron/Cargo.toml
+++ b/other/preceptron/Cargo.toml
@@ -3,8 +3,8 @@ name = "preceptron"
 version = "0.1.0"
 edition = "2021"
 
-[lib]
-crate-type = ["cdylib"]
+# [lib]
+# crate-type = ["cdylib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
